--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         .then(data => {
             document.getElementById("content").innerText = data.people;
         })
+        .catch((e) => {
+            console.error("Error: ", e);
+        })
 
     </script>
 
